--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@ const data = await response.json();
 const randomUser = data.results[0];
 ---
 <Layout title="About">
-    <h1>About</h1>
+    <h1>Contact</h1>
     <h2>{randomUser.name.first} {randomUser.name.last}</h2>
 </Layout>
 
