--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 			<a href="/">Home</a>
 			<a href="/about">About</a>
 			<a href="/contact">Contact</a>
+			<a href="/action">Action</a>
 		</nav>
 		<slot />
 	</body>
